[WIP] use pdfmake npm package instead of local

--- a/assets/index.html
+++ b/assets/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>createpdf</title>
-    <script src="pdfmake/pdfmake.min.js"></script>
-    <script src="pdfmake/vfs_fonts.js"></script>
+    <script src="../../node_modules/pdfmake/pdfmake.min.js"></script>
+    <script src="../../node_modules/pdfmake/vfs_fonts.js"></script>
     <script src="createpdf.js"></script>
   </head>
   <body>
